// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders 1`] = `
<div
  class="betweenBottomMargin-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-textarea"
    >
      <span
        class="betweenRightMargin-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The textarea
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative preventWidthResizing"
  >
    <textarea
      aria-invalid="false"
      class="default preventWidthResizing"
      id="the-textarea"
    />
    <div
      class="feedbackIconPosition"
    />
  </div>
</div>
`;

exports[`TextArea renders with a feedback state and icon 1`] = `
<div
  class="betweenBottomMargin-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-textarea"
    >
      <span
        class="betweenRightMargin-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The textarea
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative preventWidthResizing"
  >
    <textarea
      aria-invalid="true"
      class="error preventWidthResizing"
      id="the-textarea"
      style="padding-right:calc(16px + 2rem)"
    />
    <div
      class="feedbackIconPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="iconExclamationPointCircle error size16"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
